Add html unescape

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 # bcs --sample option not released yet
 git+https://github.com/learningequality/ricecooker#egg=ricecooker
 future  # tmp workaround for le-pycaption missing dep
+requests
+pyppeteer
+beautifulsoup4
+asyncio
